[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "submitty-cli"
version = "0.1.0"
description = "Submitty command-line interface"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "typing-extensions>=4.0",
]

[project.scripts]
submitty = "submitty_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/submitty_cli"]

[dependency-groups]
dev = [
    "pylint>=3.3.9",
]
